--- a/Aleshko_Labs/Aleshko_Lab1.vcxproj
+++ b/Aleshko_Labs/Aleshko_Lab1.vcxproj
@@ -136,6 +136,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Aleshko_Lab1.cpp" />
+    <ClCompile Include="C_stat.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -146,6 +147,7 @@
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="C_stat.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Pipe.h" />
     <ClInclude Include="utils.h" />
