--- a/Aleshko_Labs/Aleshko_Lab1.vcxproj.filters
+++ b/Aleshko_Labs/Aleshko_Lab1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="utils.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="C_stat.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -36,6 +39,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="utils.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="C_stat.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
