попытка в создание классса для сссетей

--- a/Aleshko_Labs/Aleshko_Lab1.vcxproj.filters
+++ b/Aleshko_Labs/Aleshko_Lab1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="C_stat.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Gts.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -42,6 +45,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="C_stat.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Gts.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
