--- a/Aleshko_Labs/Aleshko_Lab1.vcxproj
+++ b/Aleshko_Labs/Aleshko_Lab1.vcxproj
@@ -138,7 +138,7 @@
   <ItemGroup>
     <ClCompile Include="Aleshko_Lab1.cpp" />
     <ClCompile Include="C_stat.cpp" />
-    <ClCompile Include="Gts.cpp" />
+    <ClCompile Include="Network.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -150,7 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C_stat.h" />
-    <ClInclude Include="Gts.h" />
+    <ClInclude Include="Network.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Pipe.h" />
     <ClInclude Include="utils.h" />
